# taming-transformers

./: .gitignore  environment.yaml  pyproject.toml  setup.cfg  setup.py
scripts/: extract_depth.py  extract_segmentation.py  extract_submodel.py  make_samples.py  make_scene_samples.py  sample_conditional.py  sample_fast.py
src/taming/: main.py
src/taming/data/: ade20k.py  annotated_objects_coco.py  annotated_objects_dataset.py  annotated_objects_open_images.py  coco.py  faceshq.py  imagenet.py  sflckr.py  utils.py
src/taming/data/conditional_builder/: objects_bbox.py  objects_center_points.py  utils.py
src/taming/models/: cond_transformer.py  vqgan.py
src/taming/modules/diffusionmodules/: model.py
src/taming/modules/discriminator/: model.py
src/taming/modules/losses/: vqperceptual.py
src/taming/modules/transformer/: mingpt.py
src/taming/modules/vqvae/: quantize.py
