[metadata]
name = taming-transformers
author =
description = "Taming Transformers for High-Resolution Image Synthesis"
license_files = License.txt

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
py_modules =
    taming
include_package_data = True
install_requires =
    albumentations >= 0.4.3
    einops >= 0.3.0
    imageio >= 2.9.0
    imageio-ffmpeg >= 0.4.2
    more-itertools >= 8.0.0
    numpy >= 1.19.2
    omegaconf >= 2.0.0
    opencv-python >= 4.1.2.30
    pudb >= 2019.2
    pytorch-lightning >= 1.0.8
    streamlit >= 0.73.1
    test-tube >= 0.7.5
    torch >= 1.10.0
    torchvision >= 0.8.1
    tqdm
    transformers >= 4.3.1

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md

[options.extras_require]
dev =
    flake8 >= 4.0.1
    setuptools-scm >= 7.0.5
    mypy >= 0.981
